--- a/book/math_foundations/linalg/dot_prod.ipynb
+++ b/book/math_foundations/linalg/dot_prod.ipynb
@@ -29,7 +29,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 25,
+            "execution_count": 11,
             "id": "3181d7ee",
             "metadata": {},
             "outputs": [],
@@ -39,7 +39,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 26,
+            "execution_count": 12,
             "id": "d4af08fb",
             "metadata": {},
             "outputs": [
@@ -59,7 +59,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": 13,
             "id": "e23621a8",
             "metadata": {},
             "outputs": [
@@ -69,13 +69,35 @@
                             "np.int64(32)"
                         ]
                     },
-                    "execution_count": 27,
+                    "execution_count": 13,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
                 "a[0] * b[0] + a[1] * b[1] + a[2] * b[2]"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 14,
+            "id": "b0c874a6",
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "np.int64(32)"
+                        ]
+                    },
+                    "execution_count": 14,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "# alternative notation for np.dot\n",
+                "a @ b"
             ]
         },
         {
@@ -119,7 +141,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 15,
             "id": "acc754e6",
             "metadata": {},
             "outputs": [
@@ -144,7 +166,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": 16,
             "id": "169f2f01",
             "metadata": {},
             "outputs": [
@@ -154,7 +176,7 @@
                             "array([32, 77])"
                         ]
                     },
-                    "execution_count": 29,
+                    "execution_count": 16,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -166,6 +188,28 @@
                 "        A[1, 0] * b[0] + A[1, 1] * b[1] + A[1, 2] * b[2],\n",
                 "    ]\n",
                 ")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 17,
+            "id": "4b1419b5",
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "array([32, 77])"
+                        ]
+                    },
+                    "execution_count": 17,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "# alternative notation for np.dot\n",
+                "A @ b"
             ]
         },
         {
@@ -203,7 +247,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 30,
+            "execution_count": 18,
             "id": "58942b0b",
             "metadata": {},
             "outputs": [
@@ -226,7 +270,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 31,
+            "execution_count": 19,
             "id": "38155373",
             "metadata": {},
             "outputs": [
@@ -237,7 +281,7 @@
                             "       [173, 188, 203, 218]])"
                         ]
                     },
-                    "execution_count": 31,
+                    "execution_count": 19,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -259,6 +303,29 @@
                 "        ],\n",
                 "    ]\n",
                 ")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 20,
+            "id": "b41d96a9",
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "array([[ 74,  80,  86,  92],\n",
+                            "       [173, 188, 203, 218]])"
+                        ]
+                    },
+                    "execution_count": 20,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "# alternative notation for np.dot\n",
+                "A @ B"
             ]
         },
         {
