--- a/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
@@ -7,10 +7,10 @@
    "source": [
     "# $SSE$ _Gradient_\n",
     "\n",
-    "In deze sectie concentreren we ons eerst op de $SSE$ functie in het (triviale) geval dat we een linear regressie model hebben met enkel een _intercept_ ($\\pmb{b} = [b_1]^T$). We krijgen dan een U-vormige curve te zien zoals hieronder afgebeeld. Pas in tweede instantie kijken we naar modellen met één of meerdere _predictoren_ $\\pmb{b} = [b_1, b_2, \\ldots]^T$.\n",
+    "In deze sectie concentreren we ons eerst op de $SSE$ functie in het (triviale) geval dat we een linear regressiemodel hebben met enkel een _intercept_ ($\\pmb{b} = [b_1]^T$). We krijgen dan een U-vormige curve te zien zoals hieronder afgebeeld. Pas in tweede instantie kijken we naar modellen met één of meerdere _predictoren_ $\\pmb{b} = [b_1, b_2, \\ldots]^T$.\n",
     "\n",
     ":::{tip}\n",
-    "Je kan een gelijkaardige curve zien wanneer je in de 3D visualisatie uit de vorige secties, het assenstelsel zó draait rond de verticale ($SSE$) as, dat je recht op de $b_2$-as kijkt.\n",
+    "Je kunt een gelijkaardige curve zien wanneer je in de 3D visualisatie uit de vorige secties, het assenstelsel zó draait rond de verticale ($SSE$) as, dat je recht op de $b_2$-as kijkt.\n",
     ":::"
    ]
   },
