--- a/book/math_foundations/labo/linalg.ipynb
+++ b/book/math_foundations/labo/linalg.ipynb
@@ -905,6 +905,231 @@
     "\\pmb{A}^T \\odot \\pmb{b}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bed4e479",
+   "metadata": {},
+   "source": [
+    "## _Dot_ product\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\pmb{a} &= \\begin{bmatrix}7 & 3 & 2\\end{bmatrix}^T \\cr\n",
+    "\\pmb{b} &= \\begin{bmatrix}2 & 8 & 1\\end{bmatrix}^T \\cr\n",
+    "\\pmb{a}^T\\pmb{b} &= \\ldots\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f1ac936",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4f3ff69",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\pmb{a} &= \\begin{bmatrix}4.6 & 1.1 & 5.3 & 8.2 & 10.1\\end{bmatrix}^T \\cr\n",
+    "\\pmb{b} &= \\begin{bmatrix}6.1 & 1.5 & 3.5 & 7.9 & 2.8\\end{bmatrix}^T \\cr\n",
+    "\\pmb{a}^T\\pmb{b} &= \\ldots\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0693e144",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "150ebc7e",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\pmb{a} &= \\begin{bmatrix}6 & 1 & 2 & 7\\end{bmatrix}^T \\cr\n",
+    "\\pmb{b} &= \\begin{bmatrix}2 & 2 & 1\\end{bmatrix}^T \\cr\n",
+    "\\pmb{a}^T\\pmb{b} &= \\ldots\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468983ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4c901fe",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\pmb{A} &=\n",
+    "\\begin{bmatrix}\n",
+    "3 & 3 & 2 & 7 \\cr\n",
+    "1 & 4 & 7 & 5 \\cr\n",
+    "9 & 2 & 8 & 3\n",
+    "\\end{bmatrix} \\cr\n",
+    "\\pmb{b} &= \\begin{bmatrix}4 & 2 & 8 & 1\\end{bmatrix}^T \\cr\n",
+    "\\pmb{A}\\pmb{b} &= \\ldots\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06df8dfc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46f00f4a",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\pmb{A} &=\n",
+    "\\begin{bmatrix}\n",
+    "6.1 & 3.7 \\cr\n",
+    "1.0 & 4.3 \\cr\n",
+    "5.1 & 3.3 \\cr\n",
+    "3.9 & 3.7 \\cr\n",
+    "7.9 & 8.2 \\cr\n",
+    "\\end{bmatrix} \\cr\n",
+    "\\pmb{b} &= \\begin{bmatrix}3.0 & 2.2\\end{bmatrix}^T \\cr\n",
+    "\\pmb{A}\\pmb{b} &= \\ldots\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16a856bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7739b531",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\pmb{A} &=\n",
+    "\\begin{bmatrix}\n",
+    "3 & 3 & 2 & 7 \\cr\n",
+    "1 & 4 & 7 & 5 \\cr\n",
+    "9 & 2 & 8 & 3\n",
+    "\\end{bmatrix} \\cr\n",
+    "\\pmb{B} &=\n",
+    "\\begin{bmatrix}\n",
+    "6 & 2 \\cr\n",
+    "1 & 7 \\cr\n",
+    "2 & 2 \\cr\n",
+    "7 & 5\n",
+    "\\end{bmatrix} \\cr\n",
+    "\\pmb{A}\\pmb{B} &= \\ldots\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03711eaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b6e37a3",
+   "metadata": {},
+   "source": [
+    "Bereken het gemiddelde van de reeks $0$ tot en met $113$ aan de hand van een _dot_ product."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f7482ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bd652dd",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\pmb{a} &= \\begin{bmatrix}5 & 3 & 2 & 9 & 2\\end{bmatrix}^T \\cr\n",
+    "||\\pmb{a}||_2 &= \\ldots\n",
+    "\\end{aligned} \n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37ff8ba9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a58f249",
+   "metadata": {},
+   "source": [
+    "Hoe groot is de cosine similarity tussen:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\pmb{a} &= \\begin{bmatrix}4.6 & 1.1 & 5.3 & 8.2 & 10.1\\end{bmatrix}^T \\cr\n",
+    "\\pmb{b} &= \\begin{bmatrix}6.1 & 1.5 & 3.5 & 7.9 & 2.8\\end{bmatrix}^T \\cr\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeb23a00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0015c05b",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
