--- a/book/math_foundations/labo/linalg.ipynb
+++ b/book/math_foundations/labo/linalg.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "7fd1f68f",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "1f917836",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "fac6d770",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "d03e579a",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "c85e7161",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "       [12]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "b3768b70",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "array([[ 5,  8, 12]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "46dea143",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "       [12]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "id": "8dd7785f",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "daa45463",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "123d8a58",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "58cbd16b",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "        [9., 6.]]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "id": "846ed02b",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "id": "a5af87cd",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "id": "935cebf3",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "id": "b8e61127",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "id": "2afe8041",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[65], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m((\u001b[43md\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mh\u001b[49m)\u001b[38;5;241m.\u001b[39mshape)\n",
+      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m((\u001b[43md\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mh\u001b[49m)\u001b[38;5;241m.\u001b[39mshape)\n",
       "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,3,2,3) (3,3,2,5) "
      ]
     }
@@ -490,22 +490,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "d2bd0462",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (5,3,2,3) (3,30) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[66], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m((\u001b[43md\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m)\u001b[38;5;241m.\u001b[39mshape)\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,3,2,3) (3,30) "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print((d - j).shape)"
    ]
@@ -530,19 +518,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "089bb8eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a: [ 5  8 12]\n",
-      "a+5: [10 13 17]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"a: {a}\")\n",
     "print(f\"a+5: {a + 5}\")"
@@ -560,18 +539,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "b7e972c1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a x 5: [25 40 60]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"a x 5: {a * 5}\")"
    ]
@@ -596,18 +567,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "7a97d1b3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a + b: [ 6 10 15]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "b = np.array([1, 2, 3])\n",
     "print(f\"a + b: {a + b}\")"
@@ -623,22 +586,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "ad3071ec",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (3,) (4,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[70], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m b \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m])\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma + b: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43ma\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mb\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (4,) "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "b = np.array([1, 2, 3, 4])\n",
     "print(f\"a + b: {a + b}\")"
@@ -656,18 +607,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "f4fecb88",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a * b: [ 5 16 36]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "b = np.array([1, 2, 3])\n",
     "print(f\"a * b: {a * b}\")"
@@ -693,23 +636,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "31b562a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A: [[1 2]\n",
-      " [3 4]\n",
-      " [5 6]]\n",
-      "A + 5: [[ 6  7]\n",
-      " [ 8  9]\n",
-      " [10 11]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = np.array([[1, 2], [3, 4], [5, 6]])\n",
     "print(f\"A: {A}\")\n",
@@ -728,20 +658,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "547ab5d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A x 5: [[ 5 10]\n",
-      " [15 20]\n",
-      " [25 30]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"A x 5: {A * 5}\")"
    ]
@@ -766,26 +686,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "1099148f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A: [[1 2]\n",
-      " [3 4]\n",
-      " [5 6]]\n",
-      "B: [[5 3]\n",
-      " [3 1]\n",
-      " [9 0]]\n",
-      "A + B: [[ 6  5]\n",
-      " [ 6  5]\n",
-      " [14  6]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "B = np.array([[5, 3], [3, 1], [9, 0]])\n",
     "print(f\"A: {A}\")\n",
@@ -805,20 +709,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "d7043fd9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A * B: [[ 5  6]\n",
-      " [ 9  4]\n",
-      " [45  0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"A * B: {A * B}\")"
    ]
@@ -835,21 +729,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "f6667cf0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A: [[1 2]\n",
-      " [3 4]\n",
-      " [5 6]]\n",
-      "b: [1 2 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"A: {A}\")\n",
     "print(f\"b: {b}\")"
@@ -860,19 +743,7 @@
    "execution_count": null,
    "id": "37668c35",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (3,2) (3,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[82], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mA\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mb\u001b[49m)\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,2) (3,) "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(A + b)"
    ]
@@ -882,16 +753,7 @@
    "execution_count": null,
    "id": "a758c9f1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2 5 8]\n",
-      " [3 6 9]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(A.T + b)"
    ]
@@ -1128,8 +990,92 @@
    "id": "0015c05b",
    "metadata": {},
    "source": [
-    "## "
+    "## Speciale matrices\n",
+    "\n",
+    "Maak een diagonale matrix:\n",
+    "\n",
+    "$$\n",
+    "diag(3.3, 6.0, 7.1, 5.4)\n",
+    "$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5443957",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c9e741a",
+   "metadata": {},
+   "source": [
+    "Maak een idenditeitsmatrix:\n",
+    "\n",
+    "$$\n",
+    "\\pmb{I}_{67}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3bafe2c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b589344a",
+   "metadata": {},
+   "source": [
+    "Transformeer de volgende matrix in (a) een _upper triangular matrix_ en (b) een _lower triangular matrix_:\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "3 & 3 & 2 & 7 \\cr\n",
+    "1 & 4 & 7 & 5 \\cr\n",
+    "8 & 5 & 5 & 2 \\cr\n",
+    "9 & 2 & 8 & 3\n",
+    "\\end{bmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ad3f6e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c03cbc7",
+   "metadata": {},
+   "source": [
+    "Ga na of deze matrix (a) een orthogonale matrix is en (b) een rotatiematrix is.\n",
+    "$$\n",
+    "\\pmb{A} =\n",
+    "\\begin{bmatrix}\n",
+    "0.70710678 & -0.70710678 & 0.0 & 0.0 \\cr\n",
+    "0.70710678 & 0.70710678 & 0.0 & 0.0 \\cr\n",
+    "0.0 & 0.0 & 1.0 & 0.0 \\cr\n",
+    "0.0 & 0.0 & 0.0 & 1.0\n",
+    "\\end{bmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e365ea0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
