--- a/book/math_foundations/labo/linalg.ipynb
+++ b/book/math_foundations/labo/linalg.ipynb
@@ -1076,6 +1076,32 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1417d8ab",
+   "metadata": {},
+   "source": [
+    "## Systeem van lineaire vergelijkingen\n",
+    "\n",
+    "Gegeven het volgende stelsel:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "14 &= 2\\beta_1 + \\beta_2 + 3\\beta_3 \\cr\n",
+    "18 &= \\beta_1 + 4\\beta_2 + 2\\beta_3 \\cr\n",
+    "12 &= 3\\beta_1 + 2\\beta_2 + \\beta_3 \\cr\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "wat is de oplossing voor $\\beta_1$, $\\beta_2$ en $\\beta_3$?\n",
+    "\n",
+    "\n",
+    "Matrix notatie:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{y} = \\begin{bmatrix} 14 \\\\ 18 \\\\ 12 \\end{bmatrix}, \\quad \\mathbf{X} = \\begin{bmatrix} 2 & 1 & 3 \\\\ 1 & 4 & 2 \\\\ 3 & 2 & 1 \\end{bmatrix}, \\quad \\mathbf{b} = \\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\end{bmatrix}$$"
+   ]
   }
  ],
  "metadata": {
