changes after lesson2

--- a/book/math_foundations/linalg/dot_prod.ipynb
+++ b/book/math_foundations/linalg/dot_prod.ipynb
@@ -10,7 +10,7 @@
                 "De eerste vector is daarbij een rij-vector $\\pmb{a}^T$ en de tweede een kolom-vector $\\pmb{b}$.\n",
                 "$$\n",
                 "\\begin{aligned}\n",
-                "\\pmb{a}^T\\pmb{b} &= \\pmb{a}.\\pmb{b} \\\\\n",
+                "\\pmb{a}^T\\pmb{b} = \\pmb{a}'\\pmb{b} &= \\pmb{a}.\\pmb{b} \\\\\n",
                 "&= \\sum_{i=1}^{n}a_ib_i \\\\\n",
                 "&= \\begin{bmatrix}\n",
                 "a_1 & a_2 \\ldots & a_n\n",
@@ -98,6 +98,18 @@
             "source": [
                 "# alternative notation for np.dot\n",
                 "a @ b"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "788860b0",
+            "metadata": {},
+            "source": [
+                "Merk op dat:\n",
+                "\n",
+                "$$\n",
+                "\\pmb{a}^T\\pmb{b} = \\pmb{b}^T\\pmb{a}\n",
+                "$$"
             ]
         },
         {
@@ -214,6 +226,18 @@
         },
         {
             "cell_type": "markdown",
+            "id": "c3edd995",
+            "metadata": {},
+            "source": [
+                ":::{warning}\n",
+                "$$\n",
+                "\\pmb{A}\\pmb{b} \\neq \\pmb{b}\\pmb{A}\n",
+                "$$\n",
+                ":::"
+            ]
+        },
+        {
+            "cell_type": "markdown",
             "id": "07d46061",
             "metadata": {},
             "source": [
@@ -326,6 +350,18 @@
             "source": [
                 "# alternative notation for np.dot\n",
                 "A @ B"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "f9d04c43",
+            "metadata": {},
+            "source": [
+                ":::{warning}\n",
+                "$$\n",
+                "\\pmb{A}\\pmb{B} \\neq \\pmb{B}\\pmb{A}\n",
+                "$$\n",
+                ":::"
             ]
         },
         {
