--- a/book/ml_principles/basis/features.ipynb
+++ b/book/ml_principles/basis/features.ipynb
@@ -7,7 +7,7 @@
             "source": [
                 "# Features\n",
                 "\n",
-                "Iedere parameter van een model is gelinkt aan een zogenaamd **input feature**. Een input feature is een **numerieke waarde** die op zijn beurt gelinkt is aan één of meerdere variabelen in de data.  \n",
+                "Iedere parameter van een model is gelinkt aan één of meerdere zogenaamde **input features**. Een input feature is een **numerieke waarde** die op zijn beurt gelinkt is aan één of meerdere variabelen in de data.  \n",
                 "  \n",
                 "```\n",
                 " +-------------------+      +--------------------+      +----------------------+\n",
