--- a/book/ml_principles/basis/structuur.ipynb
+++ b/book/ml_principles/basis/structuur.ipynb
@@ -310,8 +310,7 @@
                 "\n",
                 "### Kenmerken\n",
                 "- **Flexibele structuur**: Geen vast schema, maar wel organisatorische markers (`{[]}`, `<div></div>`, enz.)\n",
-                "- **Hiërarchische elementen**: Kan worden opgedeeld in afzonderlijke hiërarchieën.\n",
-                "- **Messaging**: Vaak gebruikt in de context van data-uitwisseling.\n",
+                "- **Hiërarchische en/of netwerkstructuur**: Kan worden voorgesteld in diagrammen met _nodes_ en _edges_.\n",
                 "\n",
                 "### Voorbeelden\n",
                 "- JSON\n",
@@ -573,11 +572,17 @@
                 "Zo is _deep learning_ voornamlijk tot stand gekomen binnen beeldverwerking (ongestructureerde data). De alomtegenwoordige _transformer_ architectuur is afkomstig uit _Natural Language Processing_ (_NLP_; ongestructureerde data). _Graph Neural Networks_ zijn vooral ontwikkeld binnen _semi-structured_ social-media netwerk toepassingen. Moderne tree-based methodes zijn dan weer alom tegenwoordig bij gestructureerde data. Hieronder geven we een illustratief overzicht van courante technieken. \n",
                 "\n",
                 "### Gestructureerde Data\n",
-                "- \"Traditionele\" ML: Random Forest, Support Vector Machines, Logistic Regression\n",
-                "- Gradient Boosting: XGBoost, LightGBM, CatBoost\n",
-                "- Lineaire modellen: Linear/Polynomial Regression\n",
+                "- Linear/Polynomial Regression\n",
+                "- Logistic Regression\n",
+                "- Support Vector Machines\n",
+                "- Random Forest\n",
+                "- XGBoost\n",
+                "- AdaBoost\n",
+                "- LightGBM\n",
+                "- CatBoost \n",
                 "\n",
                 "### Semi-gestructureerde data\n",
+                "- Bayesian Networks\n",
                 "- Graph Neural Networks\n",
                 "- State Space Modellen\n",
                 "- Transformers\n",
