--- a/book/ml_principles/structured/intro.ipynb
+++ b/book/ml_principles/structured/intro.ipynb
@@ -41,7 +41,7 @@
                 "- **Training**, **validatie** en **test data** verwijst naar de standaard praktijk in ML om de training data in drie delen op te splitsen:\n",
                 "    - **Training data**: dit is de bulk van de data waarmee we ons leeralgorithme effectief voeden (bv. 70%).\n",
                 "    - **Validatie data**: dit is een kleiner stuk van de data waarmee we _tijdens de training en hyper parameter tuning_ nagaan hoe het leren verbeterd (bv. 20%).\n",
-                "    - **Test data**: dit is een (meestal nog) kleiner stuk van de data dat volledig opzij gehouden wordt (bv. 10%). Het model kan deze data dus op geen enkel moment tijden de training \"zien\". Ze dienen om de **generalisatie** capaciteit van het model te kwantificeren.\n",
+                "    - **Test data**: dit is een (meestal nog) kleiner stuk van de data dat volledig opzij gehouden wordt (bv. 10%). Het model kan deze data dus op geen enkel moment tijdens de training \"zien\". Ze dienen om de **generalisatie** capaciteit van het model te kwantificeren.\n",
                 "- **Generalisatie**: Deze term verwijst naar de capaciteit van het model om patronen te herkennen op nieuwe data.\n",
                 "\n",
                 "## Model selectie\n",
