--- a/book/ml_principles/structured/forests.ipynb
+++ b/book/ml_principles/structured/forests.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# _Random forests_\n",
-    "\n"
+    "\n",
+    "Het basisconcept bij **random forests** is om verschillende _decision trees_ te trainen op verschillende subsets van de data en de output van die modellen te aggregeren in een finale predictie. Het behoort daarom tot de klasse van **ensemble leeralgoritmes**. Algemeen gesproken, worden bij ensemble technieken **verschillende predictiemodellen gecombineerd om tot een betere performantie te komen**."
    ]
   }
  ],
